<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_gallery"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_music"
                android:title="@string/menu_music"/>
        <item
                android:id="@+id/nav_pixiv"
                android:title="@string/menu_pixiv"/>
        <item
                android:id="@+id/nav_slideshow"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_earth"
                android:title="@string/menu_earth"/>
    </group>
</menu>