<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="org.astral.findmaimaiultra.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="org.astral.findmaimaiultra.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>
    <fragment
            android:id="@+id/nav_music"
            android:name="org.astral.findmaimaiultra.ui.music.MusicFragment"
            android:label="@string/menu_music"
            tools:layout="@layout/fragment_music"/>
<!--    <fragment-->
<!--            android:id="@+id/nav_pixiv"-->
<!--            android:name="org.astral.findmaimaiultra.ui.pixiv.PixivFragment"-->
<!--            android:label="@string/menu_pixiv"-->
<!--            tools:layout="@layout/fragment_pixiv"/>-->
    <fragment
            android:id="@+id/nav_slideshow"
            android:name="org.astral.findmaimaiultra.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
    <fragment
            android:id="@+id/nav_earth"
            android:name="org.astral.findmaimaiultra.ui.earth.EarthFragment"
            android:label="@string/menu_earth"
            tools:layout="@layout/fragment_webview"/>
</navigation>